tests/unit/language/errors/extern_array_borrow_rejected.arche
// An extern array in-param that is neither `own` nor in-out is rejected: an extern has no body
// to verify, so every in-param is assumed mutated, and a mutated read-only borrow can't be
// allowed. Declare the buffer `own` (handed to C) or in-out (filled and handed back).
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "assumed to mutate" %t.out
#foreign {
  fill_it :: proc(buf: []char, n: int)(r: int);
}

main :: proc() {
  b: [8]char;
  fill_it(b, 8)(r:);
}
